media/radarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: radarr
  namespace: plex
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
      app.kubernetes.io/instance: radarr
  serviceName: ""
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
        app.kubernetes.io/instance: radarr
    spec:
      containers:
        - name: oauth-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v6.1.1@sha256:791aef35b8d1d2a325028b188d5a650605d69985a0dab1233c06079e7321eee0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 4180
            name: http
          args:
          - --http-address=:4180
          - --https-address=
          - --provider=keycloak
          - --keycloak-group=/admin
          - --email-domain=*
          - --scope=openid profile email
          - --login-url=https://sso.srueg.ch/auth/realms/lab/protocol/openid-connect/auth
          - --redeem-url=https://sso.srueg.ch/auth/realms/lab/protocol/openid-connect/token
          - --validate-url=https://sso.srueg.ch/auth/realms/lab/protocol/openid-connect/userinfo
          - --upstream=http://localhost:7878
          - --reverse-proxy
          - --silence-ping-logging
          - --cookie-expire=1h
          - --skip-provider-button
          livenessProbe:
            initialDelaySeconds: 30
            httpGet:
              path: /ping
              port: http
          readinessProbe:
            httpGet:
              path: /ping
              port: http
        - name: radarr
          image: docker.io/linuxserver/radarr:151@sha256:89d6cbcb5e84b14f44701f661d143a330b00b6bae134858710e5744730c53c64
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config/
              name: config
            - mountPath: /addons/
              name: plex
              subPath: addons/
            - mountPath: /movies/
              name: plex
              subPath: Movies/
          ports:
            - name: radarr
              containerPort: 7878
          livenessProbe:
            httpGet:
              path: /login
              port: radarr
            initialDelaySeconds: 60
          readinessProbe:
            httpGet:
              path: /login
              port: radarr
      terminationGracePeriodSeconds: 60
      volumes:
        - name: plex
          persistentVolumeClaim:
            claimName: plex-data
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
