media/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: plex
  labels:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: radarr
      port: 7878
      targetPort: radarr
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
